tests/Error/YS01xx/YS0110.ys
VAR x = ⛔ # Emojes are not allowed, it is an Illigal Charachter